# zoe

./: .doxyfile  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml  codeql-analysis.yml
docs/: annotated.html  annotated_dup.js  classes.html  dir_0926c76c932c38103e7128c56f6258e0.html  dir_0926c76c932c38103e7128c56f6258e0.js  dir_0ef9aeb641245e1d8e6e77e8d0a3f270.html  dir_0ef9aeb641245e1d8e6e77e8d0a3f270.js  dir_194654b33d581e57c10ae354a4c9ee85.html  dir_194654b33d581e57c10ae354a4c9ee85.js  dir_2587c7e550f77f25a11ff36fc27dbfee.html  dir_2587c7e550f77f25a11ff36fc27dbfee.js  dir_2b231950dd08b660c6554bb4f8e1a79b.html  dir_2b231950dd08b660c6554bb4f8e1a79b.js  dir_2f4e11dfe8061c7d97ab35b2e3ead00e.html  dir_2f4e11dfe8061c7d97ab35b2e3ead00e.js  dir_5ad9d0bc3a5e58f8609b35414da6a8c7.html  dir_5ad9d0bc3a5e58f8609b35414da6a8c7.js  dir_77a9e3260157fb55aefd04528892c921.html  dir_77a9e3260157fb55aefd04528892c921.js  dir_88c394fa6437962f8bde79c6de569a83.html  dir_88c394fa6437962f8bde79c6de569a83.js  dir_954068658ed41623fe54deafdb0034b9.html  dir_954068658ed41623fe54deafdb0034b9.js  dir_a968054ee2c635965604df1f2194745d.html  dir_a968054ee2c635965604df1f2194745d.js  dir_c03febc6f5fd8c0ea94ede02c5b3f25f.html  dir_c03febc6f5fd8c0ea94ede02c5b3f25f.js  dir_ca25c0efa094c2baeff09eb26e15a847.html  dir_ca25c0efa094c2baeff09eb26e15a847.js  dir_cce1e37b7fed1c34dee14243813316da.html  dir_cce1e37b7fed1c34dee14243813316da.js  dir_d1474bbc46bccb44c4224cf57c1bedfe.html  dir_d1474bbc46bccb44c4224cf57c1bedfe.js  dir_ec418117aa836f34df6c90042c2422a8.html  dir_ec418117aa836f34df6c90042c2422a8.js  dir_f8fe44db1e0c2bc636c3b2bcdd828e34.html  dir_f8fe44db1e0c2bc636c3b2bcdd828e34.js  files.html  files.js  functions.html  (+63 more)
docs/d0/d06/: _text_box_8h_source.html
docs/d0/d3d/: class_zoe_1_1vec4.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+57 more)
examples/: CMakeLists.txt
examples/tetris/: CMakeLists.txt  Main.cpp  Tetromino.cpp  Tetromino.h
sandbox/: .cproject  .project  CMakeLists.txt  Main.cpp  game.xml  rect.shader  shader.glsl  sprite.script  test.xml
sandbox/sampleObjects/: Cube.xml  PhysicsExample.xml  UITest.xml
tests/: CMakeLists.txt  collisionTest.cpp  fileTest.cpp  mathTest.cpp  matrixTest.cpp  parallelTest.cpp
zoe/: CMakeLists.txt
zoe/src/: EntryPoint.h  zoe.h
zoe/src/internal/files/display/: TextureCopyShader.glsl
zoe/src/internal/files/display/ui/: Image.glsl  Oval.glsl  Rectangle.glsl  Text.glsl
zoe/src/internal/files/materials/: DefaultMaterial.glsl  DefaultMaterial.mtl  TemplatePhong.glsl
zoe/src/internal/setup/: postBuild.cmake  preBuild.cmake
zoe/src/platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBufferImpl.cpp  OpenGLIndexBufferImpl.h  OpenGLRenderImpl.cpp  OpenGLRenderImpl.h  OpenGLRenderTargetImpl.cpp  OpenGLRenderTargetImpl.h  OpenGLShaderImpl.cpp  OpenGLShaderImpl.h  OpenGLTextureImpl.cpp  OpenGLTextureImpl.h  OpenGLVertexArrayImpl.cpp  OpenGLVertexArrayImpl.h  OpenGLVertexBufferImpl.cpp  OpenGLVertexBufferImpl.h  OpenGLVertexBufferLayoutImpl.cpp  OpenGLVertexBufferLayoutImpl.h
zoe/src/platform/linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
zoe/src/platform/windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
zoe/src/zoe/: Application.cpp  Application.h  Console.cpp  Console.h  Core.h  EntryPoint.h  File.cpp  File.h  Input.h  KeyCode.cpp  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseCode.h  Sort.cpp  Sort.h  Window.h  zpch.h
zoe/src/zoe/UI/: CommonUI.cpp  CommonUI.h  Ellipse.cpp  Ellipse.h  Font.cpp  Font.h  Image.cpp  Image.h  Oval.cpp  Oval.h  Rectangle.cpp  Rectangle.h  Text.cpp  Text.h  UILayer.cpp  UILayer.h
zoe/src/zoe/core/: Application.cpp  Application.h  Console.cpp  Console.h  Core.h  EntryPoint.h  File.cpp  File.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Scheduler.cpp  Scheduler.h  String.h  Task.cpp  Task.h  UTF.cpp  UTF.h  VirtualFiles.h  Window.h  XMLParser.cpp  XMLParser.h
zoe/src/zoe/display/: Camera.cpp  Camera.h  ChaiScriptComponent.cpp  ChaiScriptComponent.h  Component.cpp  Component.h  ComponentLayer.cpp  ComponentLayer.h  NativeScriptComponent.cpp  NativeScriptComponent.h  ScriptComponent.h
zoe/src/zoe/display/Game/: ModelComponent.cpp  ModelComponent.h  Sprite.cpp  Sprite.h  WorldObject.cpp  WorldObject.h
zoe/src/zoe/display/Physics/: AxisAlignedBox.cpp  AxisAlignedBox.h  BoxCollider.cpp  BoxCollider.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsGroup.cpp  PhysicsGroup.h
zoe/src/zoe/display/UI/: Button.cpp  Button.h  Image.cpp  Image.h  Rectangle.cpp  Rectangle.h  TextBox.cpp  TextBox.h  UITool.cpp  UITool.h
zoe/src/zoe/event/: ApplicationEvent.h  CommonEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
zoe/src/zoe/game/: Script.h
zoe/src/zoe/game/3D/: Layer3D.cpp  Layer3D.h  Line3D.cpp  Line3D.h  Object3D.cpp  Object3D.h
zoe/src/zoe/game/nodes/: 2DGameNode.cpp  2DGameNode.h  HitboxNode.h  Node.cpp  Node.h  PhysicNode.h  ScriptNode.cpp  ScriptNode.h  SpriteNode.cpp  SpriteNode.h  TextureNode.cpp  TextureNode.h  TileMapNode.h
zoe/src/zoe/math/: mat.cpp  mat.h  vec.cpp  vec.h
zoe/src/zoe/parallel/: Parallel.cpp  Parallel.h  Thread.cpp  Thread.h
zoe/src/zoe/render/: Camera.cpp  Camera.h  Font.cpp  Font.h  GraphicsContext.cpp  GraphicsContext.h  Material.cpp  Material.cpp.old  Material.h  Material.h.old  Model.cpp  Model.h  Model.h.old
zoe/src/zoe/render/api/: ImplPointer.h  IndexBuffer.h  Render.h  RenderFlags.h  RenderTarget.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
(+302 files in other folders)
